--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^1.0.3
-
+  flutter_svg: ^2.0.7
+  retrofit: ^4.0.1
+  analyzer: ^6.2.0
+  dio: ^5.3.2
+  json_serializable: ^6.1.4
+  json_annotation: ^4.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -39,7 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  retrofit_generator: ^7.0.8
+  build_runner: ^2.4.6
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
